--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.ProductDetailActivity"></activity>
+        <activity android:name=".activity.CartContentActivity"></activity>
+        <activity android:name=".activity.ProductDetailActivity" />
         <activity android:name=".activity.SubCategoryActivity" />
-        <activity android:name=".activity.CategoryActivity">
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.RegisterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.CategoryActivity"></activity>
     </application>
 
 </manifest>
