--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activity.ProfileActivity"></activity>
+        <activity android:name=".activity.OrderHistoryActivity" />
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,9 +29,7 @@
         <activity android:name=".activity.ProductDetailActivity" />
         <activity android:name=".activity.SubCategoryActivity" />
         <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.RegisterActivity">
-
-        </activity>
+        <activity android:name=".activity.RegisterActivity" />
         <activity android:name=".activity.CategoryActivity" />
     </application>
 
